<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:stateListAnimator="@animator/appbar_always_elevated"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:title="Allee SDK Sample"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="center"
                android:paddingBottom="16dp" android:paddingTop="8dp" android:id="@+id/rgEnv"
                android:checkedButton="@+id/rbProd">
            <RadioButton
                    android:text="@string/rb_prod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rbProd" android:layout_weight="1"
                    android:paddingStart="0dp" android:paddingEnd="16dp"/>
            <RadioButton
                    android:text="@string/rb_stage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rbStage" android:layout_weight="1"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"/>
            <RadioButton
                    android:text="@string/rb_dev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rbDev" android:layout_weight="1"/>

        </RadioGroup>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:paddingBottom="8dp">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp" app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content" android:id="@+id/textInputLayout"
                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout3" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/store_key" android:id="@+id/etStoreKey" android:singleLine="true"
                        android:inputType="textPassword" android:maxLines="1" android:maxLength="30"
                        android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" android:id="@+id/textInputLayout3"
                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout4" android:layout_marginEnd="8dp">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:hint="@string/port" android:id="@+id/etPort" android:singleLine="true"
                        android:inputType="number" android:maxLines="1" android:maxLength="10"
                        android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:id="@+id/textInputLayout4">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/station" android:id="@+id/etStation" android:singleLine="true"
                        android:maxLines="1" android:maxLength="20" android:imeOptions="actionDone"/>

            </android.support.design.widget.TextInputLayout>

            <TextView android:id="@+id/tvMessage"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/white"
                      android:text="Sending order..."
                      app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                      app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                      android:layout_marginStart="16dp"
                      android:layout_marginEnd="16dp"
                      app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
                      android:paddingBottom="4dp"
                      android:paddingTop="4dp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="100dp"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                tools:listitem="@layout/custom_order_view_item" tools:spanCount="5"
                tools:layoutManager="GridLayoutManager" android:id="@+id/rvList"/>

    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/bottom_sheet_status"/>

    <android.support.design.widget.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_add"
            android:onClick="actionAdd"
            app:layout_anchor="@id/bottomSheet"
            app:elevation="12dp"
            app:layout_anchorGravity="top|end"
            android:layout_margin="16dp"/>

    <ProgressBar android:id="@+id/spinner"
                 android:layout_width="wrap_content"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"/>

</android.support.design.widget.CoordinatorLayout>